--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ figure img { width: 100%; }
 .entry p, nav, .posted, figure, figcaption, h2, ul { max-width: 500px; margin: 1em auto; }
 .posted { font-size: 0.8em; color: #aaaaaa; margin-top: 0em; }
 .posted:hover { color: #000000; }
-div.title h1 { display: inline-block; }
+div.title h1 { display: inline-block; color: white; }
 div.title, div.about {
 	display: block;
 	max-width: 700px;
@@ -117,7 +117,6 @@ div.title, div.about {
 	/*text-shadow: 0 0 2px white, 0 0 1em white, 0 0 1em white, 0 0 2em white, 0 0 5em white,0 0 5em white,0 0 5em white,0 0 5em white,0 0 5em white,0 0 5em white,0 0 15em white,0 0 15em white,0 0 20em white,0 0 20em white,0 0 20em white,0 0 20em white,0 0 20em white;*/
 }
 p.about { margin: 0; padding: 16px; background: #ffffff; }
-.title { color: white; }
 
 h2.title { margin-bottom: 0.25em; }
 .entry { margin-bottom: 3em; }
