--- a/css/style.css
+++ b/css/style.css
@@ -106,10 +106,12 @@ figure {
 	margin: 0px;
 }
 figure img { width: 100%; }
+figure.landscape img, figure.portrait img { border-radius: 8px; }
 .entry p, nav, .posted, figure, figcaption, h2, ul { max-width: 500px; margin: 1em auto; }
 .posted { font-size: 0.8em; color: #aaaaaa; margin-top: 0em; }
 .posted:hover { color: #000000; }
 div.title h1 { display: inline-block; color: white; }
+div.title h1 a { color: inherit; text-decoration: none; }
 div.title, div.about {
 	display: block;
 	max-width: 700px;
