--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html {
 	min-height: 100%;
 }
 body {
-	font-family: 'Earthbound', "Helvetica Neue", Helvetica, sans-serif;
+	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	color: #202020;
 	background-color: #f6f6f6;
 	background-image:-moz-linear-gradient(top,#f6f6f6,#ffffff);
