--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ figure {
 }
 figure img { width: 100%; }
 figure.landscape img, figure.portrait img { border-radius: 8px; }
-.entry p, nav, .posted, figure, figcaption, h2, h3, h4 ul, .map, .entry_footer { max-width: 500px; margin: 1em auto; }
+.entry p, nav, .posted, figure, figcaption, h2, h3, h4, ul, .map, .entry_footer { max-width: 500px; margin: 1em auto; }
 .map { height: 320px; }
 .posted { font-size: 0.8em; color: #aaaaaa; margin-top: 0em; }
 .posted:hover { color: #000000; }
